k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-http-external
  namespace: app
  labels:
    app: app
    version: v0.31.0
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-name: "app-lb"
    service.beta.kubernetes.io/do-loadbalancer-algorithm: "round_robin"
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-path: "/ping"
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-port: "9999"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 9999
      targetPort: http
      protocol: TCP
  selector:
    app: app-http
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: app-http
  namespace: app
  labels:
    app: app-http
    version: v0.31.0
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9999
      targetPort: http
      protocol: TCP
  selector:
    app: app-http
